--- a/src/app/components/detailservicevehicule/detailservicevehicule.component.html
+++ b/src/app/components/detailservicevehicule/detailservicevehicule.component.html
@@ -30,6 +30,7 @@
             <th>Date fin</th>
             <th>Statut</th>
             <th>Plus</th>
+            <th>Action</th>
           </tr>
         </thead>
         <tbody>
